# binlets

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.test.txt  requirements.txt  setup.py
.github/workflows/: test.yml
binlet/: __init__.py  binlet.py  modwt.py
binlets/: __init__.py  binlets.py  modwt.py
src/binlets/: __init__.py  _binlets.py  _modwt.py  binlets.py  modwt.py
src/binlets/tests/: test_binlet.py  test_modwt.py
